--- a/wp-content/plugins/expowand-connect/modules/estateReference/assets/css/default/ew-estatereference-styles.css
+++ b/wp-content/plugins/expowand-connect/modules/estateReference/assets/css/default/ew-estatereference-styles.css
@@ -1,5 +1,11 @@
+/* By this CSS you can change the look and feel of the Estate Reference module. 
+You just need to add some styles to existing classes and override options by !important if necessary. */
 
-/* Search*/
+/* Search-bar */
+.EWestateReference-default-search-btn {
+    /* background: #fff !important; */
+}
+
 .EWestateReference-default-overview-search-hidden {
 	display:none !important;
 	height:0px !important;
@@ -66,38 +72,8 @@
     font-size: 13px;
 }
 
-/* Estate map*/
-#ewmap-details {
-	height:500px;
-	width:100%;
-	position:relative;
-	border: 1px solid #e0e0e0;
-}
-
-
-.ewmap-opener:after {
-	display:block;
-	position:absolute;
-	height:100%;
-	width:100%;
-	color:#fff;
-	z-index:777;
-	font-weight:600;
-	text-align:center;
-	top:0;
-	padding-top:20px;
-}
-
-
-.ewmap-full {
-    height: 100vh;
-    position: relative;
-    display: block;
-}
 
 /* Estate list*/
-
-
 
 .EWestateReference-default-overview-list {
 	display:flex;
